prevent body scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 canvas {
   display: block;
-  touch-action: none;
+  position: fixed;
 }
 
 #info {
